# intrastat-extrastat

./: .travis.yml  README.md  checklog-odoo.cfg
.oca/oca-port/blacklist/: product_harmonized_system.json
product_harmonized_system/: README.rst
product_harmonized_system/static/description/: index.html
product_harmonized_system/views/: product_template.xml
product_harmonized_system_delivery/: README.rst
product_harmonized_system_delivery/static/description/: index.html
product_harmonized_system_stock/: README.rst
product_harmonized_system_stock/static/description/: index.html
setup/_metapackage/: pyproject.toml
